--- a/CA2/MainWindow.xaml
+++ b/CA2/MainWindow.xaml
@@ -1,15 +1,26 @@
-﻿<Window x:Class="CA2.MainWindow"
+﻿<Window x:Class="CA2_Jessica.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CA2"
+        xmlns:local="clr-namespace:CA2_Jessica"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="476.87" Width="854.962">
     <Grid>
-        <RadioButton Content="All" HorizontalAlignment="Left" Margin="10,71,0,0" VerticalAlignment="Top"/>
-        <RadioButton Content="Land" HorizontalAlignment="Left" Margin="10,108,0,0" VerticalAlignment="Top"/>
-        <RadioButton Content="Water" HorizontalAlignment="Left" Margin="10,146,0,0" VerticalAlignment="Top"/>
-        <RadioButton Content="Air" HorizontalAlignment="Left" Margin="10,183,0,0" VerticalAlignment="Top"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="395*"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <RadioButton x:Name="rdbAll" Content="All" HorizontalAlignment="Left" Margin="51,77,0,0" VerticalAlignment="Top"/>
+        <RadioButton x:Name="rdbLand" Content="Land" HorizontalAlignment="Left" Margin="51,127,0,0" VerticalAlignment="Top"/>
+        <RadioButton x:Name="rdbWater" Content="Water" HorizontalAlignment="Left" Margin="51,174,0,0" VerticalAlignment="Top"/>
+        <RadioButton x:Name="rdbAir" Content="Air" HorizontalAlignment="Left" Margin="51,216,0,0" VerticalAlignment="Top"/>
+        <ListBox x:Name="lbxActivities" HorizontalAlignment="Left" Height="232" Margin="158,66,0,0" VerticalAlignment="Top" Width="225"/>
+        <ListBox HorizontalAlignment="Left" Height="232" Margin="496,66,0,0" VerticalAlignment="Top" Width="216"/>
+        <Label Content="Description" HorizontalAlignment="Left" Margin="51,324,0,0" VerticalAlignment="Top"/>
+        <TextBlock x:Name="tblkDescription" HorizontalAlignment="Left" Height="56" Margin="158,336,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="554"/>
+        <Label Content="Cost" HorizontalAlignment="Left" Margin="62,374,0,0" VerticalAlignment="Top"/>
+        <TextBlock x:Name="tblkCost" HorizontalAlignment="Left" Height="23" Margin="158,410,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+
     </Grid>
 </Window>
