--- a/CA2/MainWindow.xaml
+++ b/CA2/MainWindow.xaml
@@ -1,26 +1,30 @@
-﻿<Window x:Class="CA2_Jessica.MainWindow"
+﻿<Window x:Class="CA2.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CA2_Jessica"
+        xmlns:local="clr-namespace:CA2"
         mc:Ignorable="d"
-        Title="MainWindow" Height="476.87" Width="854.962">
+        Title="MainWindow" Height="554.622" Width="976.471">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="395*"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <RadioButton x:Name="rdbAll" Content="All" HorizontalAlignment="Left" Margin="51,77,0,0" VerticalAlignment="Top"/>
-        <RadioButton x:Name="rdbLand" Content="Land" HorizontalAlignment="Left" Margin="51,127,0,0" VerticalAlignment="Top"/>
-        <RadioButton x:Name="rdbWater" Content="Water" HorizontalAlignment="Left" Margin="51,174,0,0" VerticalAlignment="Top"/>
-        <RadioButton x:Name="rdbAir" Content="Air" HorizontalAlignment="Left" Margin="51,216,0,0" VerticalAlignment="Top"/>
-        <ListBox x:Name="lbxActivities" HorizontalAlignment="Left" Height="232" Margin="158,66,0,0" VerticalAlignment="Top" Width="225"/>
-        <ListBox HorizontalAlignment="Left" Height="232" Margin="496,66,0,0" VerticalAlignment="Top" Width="216"/>
+        <RadioButton x:Name="rdbAll" Content="All" HorizontalAlignment="Left" Margin="51,77,0,0" VerticalAlignment="Top" Checked="RdbAll_Click"/>
+        <RadioButton x:Name="rdbLand" Content="Land" HorizontalAlignment="Left" Margin="51,127,0,0" VerticalAlignment="Top" Checked="RdbAll_Click"/>
+        <RadioButton x:Name="rdbWater" Content="Water" HorizontalAlignment="Left" Margin="51,174,0,0" VerticalAlignment="Top" Checked="RdbAll_Click"/>
+        <RadioButton x:Name="rdbAir" Content="Air" HorizontalAlignment="Left" Margin="51,216,0,0" VerticalAlignment="Top" Checked="RdbAll_Click"/>
+        <ListBox x:Name="lbxActivities" HorizontalAlignment="Left" Height="232" Margin="158,66,0,0" VerticalAlignment="Top" Width="225" SelectionChanged="Lbx_SelectionChanged"/>
+        <ListBox x:Name="lbxActivitiesSelected" HorizontalAlignment="Left" Height="232" Margin="496,66,0,0" VerticalAlignment="Top" Width="216"/>
+        <Button Content="&gt; &gt;" HorizontalAlignment="Left" Margin="404,122,0,0" VerticalAlignment="Top" Width="75" Click="BtnAdd_Click"/>
+        <Button Content="&lt; &lt;" HorizontalAlignment="Left" Margin="404,174,0,0" VerticalAlignment="Top" Width="75" Click="BtnRemove_Click"/>
         <Label Content="Description" HorizontalAlignment="Left" Margin="51,324,0,0" VerticalAlignment="Top"/>
         <TextBlock x:Name="tblkDescription" HorizontalAlignment="Left" Height="56" Margin="158,336,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="554"/>
-        <Label Content="Cost" HorizontalAlignment="Left" Margin="62,374,0,0" VerticalAlignment="Top"/>
-        <TextBlock x:Name="tblkCost" HorizontalAlignment="Left" Height="23" Margin="158,410,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-
+        <Label Content="Cost" HorizontalAlignment="Left" Margin="62,452,0,0" VerticalAlignment="Top" RenderTransformOrigin="14.038,-13.048"/>
+        <TextBlock x:Name="tblkCost" HorizontalAlignment="Left" Height="23" Margin="134,447,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Label Content="Total Cost" HorizontalAlignment="Left" Margin="445,447,0,0" VerticalAlignment="Top" RenderTransformOrigin="14.038,-13.048"/>
+        <TextBlock x:Name="tblkCostTotal" HorizontalAlignment="Left" Height="23" Margin="512,447,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
     </Grid>
+
 </Window>
