--- a/CA2/MainWindow.xaml
+++ b/CA2/MainWindow.xaml
@@ -1,30 +1,66 @@
-﻿<Window x:Class="CA2.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CA2"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" x:Class="CA2.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="554.622" Width="976.471">
-    <Grid>
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        TextElement.FontWeight="Regular"
+        TextElement.FontSize="13"
+        TextOptions.TextFormattingMode="Ideal"
+        TextOptions.TextRenderingMode="Auto"
+        Background="{DynamicResource MaterialDesignPaper}"
+        FontFamily="{DynamicResource MaterialDesignFont}"
+        
+        Title="MainWindow" Height="707.496" Width="868.152">
+    <Grid RenderTransformOrigin="0.493,0.485" Margin="10,0,6,1">
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid.RenderTransform>
+            <TransformGroup>
+                <ScaleTransform/>
+                <SkewTransform/>
+                <RotateTransform Angle="-0.42"/>
+                <TranslateTransform X="-0.064" Y="0.052"/>
+            </TransformGroup>
+        </Grid.RenderTransform>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="395*"/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="1160*"/>
+            <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
-        <RadioButton x:Name="rdbAll" Content="All" HorizontalAlignment="Left" Margin="51,77,0,0" VerticalAlignment="Top" Checked="RdbAll_Click"/>
-        <RadioButton x:Name="rdbLand" Content="Land" HorizontalAlignment="Left" Margin="51,127,0,0" VerticalAlignment="Top" Checked="RdbAll_Click"/>
-        <RadioButton x:Name="rdbWater" Content="Water" HorizontalAlignment="Left" Margin="51,174,0,0" VerticalAlignment="Top" Checked="RdbAll_Click"/>
-        <RadioButton x:Name="rdbAir" Content="Air" HorizontalAlignment="Left" Margin="51,216,0,0" VerticalAlignment="Top" Checked="RdbAll_Click"/>
-        <ListBox x:Name="lbxActivities" HorizontalAlignment="Left" Height="232" Margin="158,66,0,0" VerticalAlignment="Top" Width="225" SelectionChanged="Lbx_SelectionChanged"/>
-        <ListBox x:Name="lbxActivitiesSelected" HorizontalAlignment="Left" Height="232" Margin="496,66,0,0" VerticalAlignment="Top" Width="216"/>
-        <Button Content="&gt; &gt;" HorizontalAlignment="Left" Margin="404,122,0,0" VerticalAlignment="Top" Width="75" Click="BtnAdd_Click"/>
-        <Button Content="&lt; &lt;" HorizontalAlignment="Left" Margin="404,174,0,0" VerticalAlignment="Top" Width="75" Click="BtnRemove_Click"/>
-        <Label Content="Description" HorizontalAlignment="Left" Margin="51,324,0,0" VerticalAlignment="Top"/>
-        <TextBlock x:Name="tblkDescription" HorizontalAlignment="Left" Height="56" Margin="158,336,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="554"/>
-        <Label Content="Cost" HorizontalAlignment="Left" Margin="62,452,0,0" VerticalAlignment="Top" RenderTransformOrigin="14.038,-13.048"/>
-        <TextBlock x:Name="tblkCost" HorizontalAlignment="Left" Height="23" Margin="134,447,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Total Cost" HorizontalAlignment="Left" Margin="445,447,0,0" VerticalAlignment="Top" RenderTransformOrigin="14.038,-13.048"/>
-        <TextBlock x:Name="tblkCostTotal" HorizontalAlignment="Left" Height="23" Margin="512,447,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <RadioButton x:Name="rdbAll" Content="All" HorizontalAlignment="Left" Margin="49,146,0,0" VerticalAlignment="Top" Checked="RdbAll_Click" Grid.Column="1" Width="88" Height="18"/>
+        <RadioButton x:Name="rdbLand" Content="Land" HorizontalAlignment="Left" Margin="49,182,0,0" VerticalAlignment="Top" Checked="RdbAll_Click" Grid.Column="1" Width="88" Height="18"/>
+        <RadioButton x:Name="rdbWater" Content="Water" HorizontalAlignment="Left" Margin="49,214,0,0" VerticalAlignment="Top" Checked="RdbAll_Click" Grid.Column="1" Width="71" Height="18"/>
+        <RadioButton x:Name="rdbAir" Content="Air" HorizontalAlignment="Left" Margin="51,253,0,0" VerticalAlignment="Top" Checked="RdbAll_Click" Grid.Column="1" Width="71" Height="18"/>
+        <ListBox x:Name="lbxActivities"  BorderThickness="1" BorderBrush="#2c85a79e"  HorizontalAlignment="Left" Height="289" Margin="167,114,0,0" VerticalAlignment="Top" Width="204" SelectionChanged="Lbx_SelectionChanged" Grid.Column="1"/>
+        <ListBox x:Name="lbxActivitiesSelected"  BorderThickness="1" BorderBrush="#2c85a79e" HorizontalAlignment="Left" Height="297" Margin="562,114,0,0" VerticalAlignment="Top" Width="225" Grid.Column="1"/>
+        <Button Content="&gt; &gt;" HorizontalAlignment="Left" Margin="429,183,0,0" VerticalAlignment="Top" Width="62" Click="BtnAdd_Click" Grid.Column="1" Height="25"/>
+        <Button Content="&lt; &lt;" HorizontalAlignment="Left" Margin="429,233,0,0" VerticalAlignment="Top" Width="62" Click="BtnRemove_Click" Grid.Column="1" Height="25"/>
+        <Label Content="Cost" HorizontalAlignment="Left" Margin="49,329,0,0" VerticalAlignment="Top" RenderTransformOrigin="14.038,-13.048" Grid.Column="1" Width="56" Height="24"/>
+        <TextBlock x:Name="tblkCost" HorizontalAlignment="Left" Height="23" Margin="51,358,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="73" Grid.Column="1"/>
+        <Label Content="Total Cost" HorizontalAlignment="Left" Margin="562,445,0,0" VerticalAlignment="Top" RenderTransformOrigin="14.038,-13.048" Grid.Column="1" Width="91"/>
+        <TextBlock x:Name="tblkCostTotal" HorizontalAlignment="Left" Height="23" Margin="689,448,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="98" RenderTransformOrigin="0.619,1.362" Grid.Column="1"/>
+        <Label Content="Activity Planner" HorizontalAlignment="Left" Margin="209,21,0,0" VerticalAlignment="Top" Grid.Column="1" Width="118"/>
+
+        <materialDesign:Card Content="Card" Grid.Column="1" HorizontalAlignment="Left" Margin="63,433,0,0" VerticalAlignment="Top" Width="308" Height="226"/>
+        <Label Content="Activities" HorizontalAlignment="Left" Margin="232,86,0,0" VerticalAlignment="Top" Grid.Column="1" Width="66"/>
+        <Label Content="Selected Activities" HorizontalAlignment="Left" Margin="613,86,0,0" VerticalAlignment="Top" Grid.Column="1" Width="117"/>
+        <TextBlock x:Name="tblkDescription" HorizontalAlignment="Left" Height="76" Margin="149,529,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="207" Grid.Column="1" RenderTransformOrigin="0.5,0.5">
+            <TextBlock.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleY="-0.055"/>
+                    <RotateTransform/>
+                    <TranslateTransform Y="-0.124"/>
+                </TransformGroup>
+            </TextBlock.RenderTransform>
+        </TextBlock>
+        <Label Content="Description" HorizontalAlignment="Left" Margin="167,509,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.641,1.016" Grid.Column="1" Width="111"/>
+
     </Grid>
 
 </Window>
