--- a/CA2/MainWindow.xaml
+++ b/CA2/MainWindow.xaml
@@ -14,53 +14,75 @@
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}"
         
-        Title="MainWindow" Height="707.496" Width="868.152">
-    <Grid RenderTransformOrigin="0.493,0.485" Margin="10,0,6,1">
-        <Grid.RowDefinitions>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
-        <Grid.RenderTransform>
-            <TransformGroup>
-                <ScaleTransform/>
-                <SkewTransform/>
-                <RotateTransform Angle="-0.42"/>
-                <TranslateTransform X="-0.064" Y="0.052"/>
-            </TransformGroup>
-        </Grid.RenderTransform>
+        Title="MainWindow">
+    <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="1160*"/>
-            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <RadioButton x:Name="rdbAll" Content="All" HorizontalAlignment="Left" Margin="49,146,0,0" VerticalAlignment="Top" Checked="RdbAll_Click" Grid.Column="1" Width="88" Height="18"/>
-        <RadioButton x:Name="rdbLand" Content="Land" HorizontalAlignment="Left" Margin="49,182,0,0" VerticalAlignment="Top" Checked="RdbAll_Click" Grid.Column="1" Width="88" Height="18"/>
-        <RadioButton x:Name="rdbWater" Content="Water" HorizontalAlignment="Left" Margin="49,214,0,0" VerticalAlignment="Top" Checked="RdbAll_Click" Grid.Column="1" Width="71" Height="18"/>
-        <RadioButton x:Name="rdbAir" Content="Air" HorizontalAlignment="Left" Margin="51,253,0,0" VerticalAlignment="Top" Checked="RdbAll_Click" Grid.Column="1" Width="71" Height="18"/>
-        <ListBox x:Name="lbxActivities"  BorderThickness="1" BorderBrush="#2c85a79e"  HorizontalAlignment="Left" Height="289" Margin="167,114,0,0" VerticalAlignment="Top" Width="204" SelectionChanged="Lbx_SelectionChanged" Grid.Column="1"/>
-        <ListBox x:Name="lbxActivitiesSelected"  BorderThickness="1" BorderBrush="#2c85a79e" HorizontalAlignment="Left" Height="297" Margin="562,114,0,0" VerticalAlignment="Top" Width="225" Grid.Column="1"/>
-        <Button Content="&gt; &gt;" HorizontalAlignment="Left" Margin="429,183,0,0" VerticalAlignment="Top" Width="62" Click="BtnAdd_Click" Grid.Column="1" Height="25"/>
-        <Button Content="&lt; &lt;" HorizontalAlignment="Left" Margin="429,233,0,0" VerticalAlignment="Top" Width="62" Click="BtnRemove_Click" Grid.Column="1" Height="25"/>
-        <Label Content="Cost" HorizontalAlignment="Left" Margin="49,329,0,0" VerticalAlignment="Top" RenderTransformOrigin="14.038,-13.048" Grid.Column="1" Width="56" Height="24"/>
-        <TextBlock x:Name="tblkCost" HorizontalAlignment="Left" Height="23" Margin="51,358,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="73" Grid.Column="1"/>
-        <Label Content="Total Cost" HorizontalAlignment="Left" Margin="562,445,0,0" VerticalAlignment="Top" RenderTransformOrigin="14.038,-13.048" Grid.Column="1" Width="91"/>
-        <TextBlock x:Name="tblkCostTotal" HorizontalAlignment="Left" Height="23" Margin="689,448,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="98" RenderTransformOrigin="0.619,1.362" Grid.Column="1"/>
-        <Label Content="Activity Planner" HorizontalAlignment="Left" Margin="209,21,0,0" VerticalAlignment="Top" Grid.Column="1" Width="118"/>
 
-        <materialDesign:Card Content="Card" Grid.Column="1" HorizontalAlignment="Left" Margin="63,433,0,0" VerticalAlignment="Top" Width="308" Height="226"/>
-        <Label Content="Activities" HorizontalAlignment="Left" Margin="232,86,0,0" VerticalAlignment="Top" Grid.Column="1" Width="66"/>
-        <Label Content="Selected Activities" HorizontalAlignment="Left" Margin="613,86,0,0" VerticalAlignment="Top" Grid.Column="1" Width="117"/>
-        <TextBlock x:Name="tblkDescription" HorizontalAlignment="Left" Height="76" Margin="149,529,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="207" Grid.Column="1" RenderTransformOrigin="0.5,0.5">
-            <TextBlock.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform AngleY="-0.055"/>
-                    <RotateTransform/>
-                    <TranslateTransform Y="-0.124"/>
-                </TransformGroup>
-            </TextBlock.RenderTransform>
-        </TextBlock>
-        <Label Content="Description" HorizontalAlignment="Left" Margin="167,509,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.641,1.016" Grid.Column="1" Width="111"/>
 
+        <Grid>
+            <Grid.RowDefinitions >
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions >
+
+
+            <StackPanel Grid.Row ="0" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="20" Orientation="Horizontal">
+                <RadioButton x:Name="rdbAll" Content="All" Checked="RdbAll_Click" Margin="10"/>
+                <RadioButton x:Name="rdbLand" Content="Land" Checked="RdbAll_Click" Margin="10"/>
+                <RadioButton x:Name="rdbWater" Content="Water" Checked="RdbAll_Click" Margin="10"/>
+                <RadioButton x:Name="rdbAir" Content="Air" Checked="RdbAll_Click" Margin="10"/>
+            </StackPanel>
+
+            <ListBox x:Name="lbxActivities" Grid.Row="1" BorderThickness="1" BorderBrush="#2c85a79e" VerticalAlignment="Center"  SelectionChanged="Lbx_SelectionChanged"/>
+
+            <StackPanel Grid.Row="2" HorizontalAlignment="Center" Width="400" VerticalAlignment="Center">
+                <materialDesign:Card Padding="10" >
+                    <StackPanel>
+                        <StackPanel>
+                            <materialDesign:PackIcon Kind="bike" Height="128" Width="128" VerticalAlignment="Center" HorizontalAlignment="Center" />
+                            <TextBlock HorizontalAlignment="Center" x:Name="tblkCost" TextWrapping="Wrap" Style="{StaticResource MaterialDesignHeadline4TextBlock}"/>
+                            <TextBlock x:Name="tblkNameActivity" TextWrapping="Wrap" Style="{StaticResource MaterialDesignHeadline6TextBlock}" />
+                            <TextBlock x:Name="tblkDescription" TextWrapping="Wrap" Style="{StaticResource MaterialDesignOverlineTextBlock}" />
+                        </StackPanel>
+                        <Button Click="BtnAdd_Click" Margin="0 10 0 0">
+                            <materialDesign:PackIcon Kind="Plus" />
+                        </Button>
+                    </StackPanel>
+                    
+                </materialDesign:Card>
+
+                
+            </StackPanel>
+
+
+        </Grid>
+
+        <Grid Grid.Column="1" Background="White">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+            </Grid.RowDefinitions>
+
+            <StackPanel Grid.Row="0">
+                <materialDesign:PackIcon Kind="Cart" Height="128" Width="128" HorizontalAlignment="Center" VerticalAlignment="Center"></materialDesign:PackIcon>
+                <TextBlock Text="Activities" Style="{StaticResource MaterialDesignHeadline6TextBlock}" HorizontalAlignment="Center"/>
+            </StackPanel>
+
+            <ListBox Grid.Row="1" x:Name="lbxActivitiesSelected" BorderThickness="1" BorderBrush="#2c85a79e" VerticalAlignment="Stretch" />
+            <Button Grid.Row="2" Click="BtnRemove_Click" Style="{StaticResource MaterialDesignIconButton}">
+                <materialDesign:PackIcon Kind="Trash"  />
+            </Button>
+            <StackPanel Grid.Row="3" Margin="0 50">
+                <TextBlock  Style="{StaticResource MaterialDesignCaptionTextBlock}" Text="Total Cost" HorizontalAlignment="Center"/>
+                <TextBlock Style="{StaticResource MaterialDesignHeadline6TextBlock}" x:Name="tblkCostTotal" HorizontalAlignment="Center" />
+            </StackPanel>
+        </Grid>
     </Grid>
 
 </Window>
